clusters/k3s/apps/system/beszel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beszel
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: 8090
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: beszel
  namespace: docker-services
subsets:
- addresses:
  - ip: 192.168.1.40
  ports:
  - port: 8090
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: beszel
  namespace: docker-services
  labels:
    kubernetes.io/service-name: beszel
addressType: IPv4
endpoints:
- addresses:
  - 192.168.1.40
ports:
- port: 8090
  protocol: TCP
